Add patch operation
